# uptime-kuma-v2-api

./: .env.example  .gitignore  API.md  COOLIFY.md  Dockerfile  LICENSE  README.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
app/: auth.py  config.py  kuma_client.py  main.py
app/monitors/: defaults.py  schemas.py
scripts/: bootstrap_kuma.py  loadtest.py  smoke_test.py
tests/: test_defaults.py  test_schemas.py
