[project]
name = "uptime-kuma-v2-api"
version = "0.1.0"
description = "A small self-hostable REST API for Uptime Kuma 2.x"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-socketio[client]==5.16.3",
    "websocket-client==1.8.0",
    "pydantic==2.10.4",
    "slowapi==0.1.9",
    "pyotp==2.9.0",
]

[project.optional-dependencies]
test = ["pytest==9.1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
